# PHydroDesign

./: .pypirc  LICENSE  README.md  setup.cfg  setup.py
.github/workflow/: release.yml
.github/workflows/: release.yml
example/: .dodsrc  example.ipynb  main.ipynb
example/outputs/: interpolations.csv
logos/: Logo.xcf  Portada.xcf
source/precipitation/: main.py  results.py
src/RiSA/: __init__.py  __version__.py  basics.py  download.py  figures.py  frequency_analysis.py  geo_tools.py  hydro_tools.py  interp.py  libraries.py  main.py  masks.py  master_results.py  results.py  rg_pre.py
