[metadata]
name = pydrodesign
version = 1.0.8
author = Joaquin Sebastian Segura Ellis
author_email = joaquin.segura.ellis@mi.unc.edu.ar
description = Tools for Hydrology Design.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joaquinseguraellis/PydroDesign
project_urls = 
    Bug Tracker = https://github.com/joaquinseguraellis/PydroDesign/issues
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: Microsoft :: Windows :: Windows 11
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Hydrology

[options]
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
where = src

[options.package_data]
RiSA =
    *.pickle
RiSA.data =
    *.pickle